CHK-1558-log-transactionid (#60)
* feat: added filter for log transactionId adn logback.xml

* feat: added test for copyToMdc method

* fix: log from debug to info

* fix: changed variable name

* fix: changed appender name

* fix: problem logback.xml appender

* fix: Code Smells

* fix: Code Smells